<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mine组件</string>
    <string name="mine_personal_home_page">个人主页</string>
    <string name="mine_record">我的记录</string>
    <string name="mine_wanna">想看</string>
    <string name="mine_has_seen">看过</string>
    <string name="mine_comment_movie_format">%1$d部待评价</string>
    <string name="mine_movie_num_format">共%1$d部</string>
    <string name="mine_order">订单</string>
    <string name="mine_wallet">钱包</string>
    <string name="mine_fans_club">影迷俱乐部</string>
    <string name="mine_m_bean_add_format">%1$s%2$s个M豆</string>
    <string name="mine_m_bean_add">今日增加</string>
    <string name="mine_m_bean_reduce_format">今日减少%1$d个M豆</string>
    <string name="mine_club_play_rule">玩法介绍</string>
    <string name="mine_service">我的服务</string>
    <string name="mine_my_publish">我的发布</string>
    <string name="mine_my_collection">收藏</string>
    <string name="mine_setting">设置</string>
    <string name="mine_black_name">黑名单</string>
    <string name="mine_privacy">隐私</string>
    <string name="mine_customer_service_on_line">在线客服</string>
    <string name="mine_feed_back">意见反馈</string>
    <string name="mine_license">证照信息</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_login_register">注册 登录</string>
    <string name="mine_fans_format">%1$s粉丝</string>
    <string name="mine_attention_format">&#160;&#160;|&#160;&#160;%1$s关注</string>
    <string name="mine_request_indentifity">申请认证</string>
    <string name="mine_request_indentifity_ing">审核中</string>
    <string name="mine_goto_authentication">去认证</string>
    <string name="mine_authen_reviewer">影评人认证</string>
    <string name="mine_authen_movier">电影人认证</string>
    <string name="mine_authen_orgnization">机构认证</string>
    <string name="mine_authen_reviewer_des">1年内发布长影评12条及以上；\n关注数不少于10，粉丝数不少于20；</string>
    <string name="mine_authen_movier_des">参与至少一部电影/电视剧，含网络上线，比如：演员，导演，制片，美术，摄影等</string>
    <string name="mine_authen_orgnization_des">适用于在国内注册过的影视公司或机构</string>
    <string name="mine_authen_title">身份认证</string>
    <string name="mine_goto_authen_info_tips">身份一经认证无法更改，请谨慎认证</string>
    <string name="mine_authen_privilege">认证特权</string>
    <string name="mine_authen_privilege_sole_symbol">独家标识</string>
    <string name="mine_authen_privilege_sole_symbol_des">享有专属标志，彰显独特身份</string>
    <string name="mine_authen_privilege_recommend">优先推荐</string>
    <string name="mine_authen_privilege_recommend_des">内容优先推荐，增加曝光快速涨粉</string>
    <string name="mine_authen_privilege_more_privilege">更多特权</string>
    <string name="mine_authen_privilege_more_privilege_des">认证用户和机构可以发表文章</string>
    <string name="mine_login_sign">注册-登录</string>
    <string name="mine_login_follow_count">关注 %1$s</string>
    <string name="mine_login_fans_count">粉丝 %1$s</string>
    <string name="mine_want_see_hot_film_count">%1$S部热映中</string>
    <string name="mine_has_seen_rating_wait_count">%1$S部待评论</string>
    <string name="mine_movie_count_tip">登录后查看</string>
    <string name="mine_order_info">订单信息</string>
    <string name="mine_card_coupon_wallet">卡券包</string>
    <string name="mine_write_center">创作中心</string>
    <string name="mine_write_center_user_home">创作者首页</string>
    <string name="mine_write_center_content">内容管理</string>
    <string name="mine_write_center_task">任务中心</string>
    <string name="mine_write_center_content_count_tip">已创作内容：共</string>
    <string name="mine_write_center_content_count_unit">篇</string>
    <string name="mine_write_center_browse_count_tip">近7日浏览量：累计</string>
    <string name="mine_write_center_browse_count_unit">次</string>
    <string name="mine_write_center_unread_medal">您获得了%1$d个%2$S勋章，快看一下吧～</string>
    <string name="mine_write_center_un_login">您还未登录哦～</string>
    <string name="mine_write_center_not_creator">您还不是创作者哦，快去进行创作吧～</string>
    <string name="mine_service_bean_lottery">M豆抽奖</string>
    <string name="mine_service_toplist">我的片单</string>
    <string name="mine_service_expand">展开</string>
    <string name="mine_service_collapse">收起</string>
    <string name="mine_service_has_auth_type">您已认证身份</string>
    <string name="mine_activity_title">活动</string>
    <string name="mine_activity_btn_text">进入活动</string>
    <string name="mine_more">查看更多</string>
    <string name="mine_authen_user_name">用户名</string>
    <string name="mine_authen_real_name">真实姓名</string>
    <string name="mine_authen_please_input_real_name">请输入真实姓名</string>
    <string name="mine_authen_id_card">身份证号</string>
    <string name="mine_authen_please_input_id_card">请输入手机号对应的身份证号</string>
    <string name="mine_authen_input_phone_tips">工作人员可能会在48小时内联系你，请保持手机畅通</string>
    <string name="mine_authen_please_input_phone_num">请输入手机号</string>
    <string name="mine_authen_phone_num">手机号</string>
    <string name="mine_authen_post">邮箱</string>
    <string name="mine_authen_please_input_post_box">请输入邮箱</string>
    <string name="mine_authen_id_digits">01234567890Xx</string>
    <string name="mine_authen_id_card_image">手持身份证照</string>
    <string name="mine_authen_take_photo_tips">请保持五官清晰可见无遮挡</string>
    <string name="mine_authen_simple">示例</string>
    <string name="mine_authen_visiting_card">名片或工作证</string>
    <string name="mine_authen_offical_letter_down">认证公函下载</string>
    <string name="mine_authen_business_license">营业执照</string>
    <string name="mine_authen_offical_letter">认证公函</string>
    <string name="mine_authen_submit">提交认证</string>
    <string name="mine_authen_submit_tips">本人保证所提供信息真实有效，并同意为此承担一切后果</string>
    <string name="mine_authen_review_num_format">请选择你认为最能代表自己创作水平的%1$d篇影评</string>
    <string name="mine_authen_review_only_select_three">只能选择3篇影评</string>
    <string name="mine_authen_expand_all">展开全部</string>
    <string name="mine_authen_my_production">我的作品</string>
    <string name="mine_authen_please_input_my_production">输入作品名称</string>
    <string name="mine_authen_submit_error_tips">请检查填写信息，确保无误</string>
    <string name="mine_collection_movie">电影</string>
    <string name="mine_collection_cinema">影院</string>
    <string name="mine_collection_person">影人</string>
    <string name="mine_collection_article">文章</string>
    <string name="mine_collection_post">帖子</string>
    <string name="mine_collection_title">我的收藏</string>
    <string name="mine_content_title">我的内容</string>
    <string name="mine_drafts">草稿箱</string>
    <string name="mine_collection_release_format">上映日期：%1$s %2$s</string>
    <string name="mine_collection_total_movie_format">共 %1$d 部影片</string>
    <string name="mine_collection_total_person_format">共 %1$d 位影人</string>
    <string name="mine_collection_total_cinema_format">共 %1$d 家影院</string>
    <string name="mine_collection_total_article_format">共 %1$d 篇文章</string>
    <string name="mine_collection_total_post_format">共 %1$d 条帖子</string>
    <string name="mine_collection_article_auther_format">作者：%1$s</string>
    <string name="mine_scan_after_login">登录后查看</string>
    <string name="mine_order_empty">没有订单</string>
    <string name="mine_order_buy_ticket_to_cinema">快去买票观影吧</string>
    <string name="mine_wallet_empty">玩转社区得礼包</string>
    <string name="mine_wallet_community">玩转社区</string>
    <string name="mine_wallet_gift">得礼包</string>
    <string name="mine_wann_buy">购票</string>
    <string name="mine_auth_submit_reviewer_success">已提交认证，等待审核中</string>
    <string name="mine_auth_submit_success">已提交认证，等待审核中，必要时客服会与您联系，请保持手机畅通</string>
    <string name="mine_message_comment">评论</string>
    <string name="mine_message_praise">点赞</string>
    <string name="mine_message_remind">提醒</string>
    <string name="mine_order_open">即将开映</string>
    <string name="mine_member_how_to_update">如何升级</string>
    <string name="mine_member_level_package_privilege">等级礼包</string>
    <string name="mine_member_birthday_privilege">生日特权</string>
    <string name="mine_member_game_coin_privilege">游戏金币</string>
    <string name="mine_member_movie_privilege">电影周边</string>
    <string name="mine_member_customer_service_privilege">客服特权</string>
    <string name="mine_member_what_is_m_bean">什么是M豆</string>
    <string name="mine_member_m_bean_format">%1$s  M豆</string>
    <string name="mine_member_get_m_bean">获取M豆</string>
    <string name="mine_member_more">更多方法 ></string>
    <string name="mine_member_goto_buy">去购票</string>
    <string name="mine_member_goto_community">去社区</string>
    <string name="mine_member_goto_game">去游戏</string>
    <string name="mine_member_center">会员中心</string>
    <string name="mine_my_wallet">我的钱包</string>
    <string name="coupon_title">购票优惠券</string>
    <string name="used">已使用</string>
    <string name="expired">已过期</string>
    <string name="gift_card_title">礼品卡</string>
    <string name="account_balance">账户余额</string>
    <string name="gift_card_des">虚拟礼品卡</string>
    <string name="balance">余额</string>
    <string name="dot_des">点</string>
    <string name="money">&#165;</string>
    <string name="tips">请联系客服退款，客服电话 4006059500</string>
    <string name="card_tip" tools:ignore="ExtraTranslation">点击底部按钮添加礼品卡</string>
    <string name="coupon_tip" tools:ignore="ExtraTranslation">点击底部按钮添加优惠券</string>
    <string name="add_coupon">添加优惠券</string>
    <string name="coupon_used_record">优惠券使用记录</string>
    <string name="add_card">添加礼品卡</string>
    <string name="mine_member_draw_lottery">抽奖</string>
    <string name="add_tip">请输入卡号</string>
    <string name="add_pwd_tip">请输入密码</string>
    <string name="coupon_record_page">优惠券使用记录</string>
    <string name="collection_movie_date_pattern">yyyy年MM月dd日</string>
    <string name="mine_auth_pic_download_success">认证公函已保存至%1$s</string>
    <string name="mine_auth_pic_download_failed">认证公函下载失败</string>
    <string name="mine_member_exchange">兑换</string>
    <string name="mine_member_exchange_m_bean">M豆兑换</string>
    <string name="mine_goods_num">兑换数量</string>
    <string name="mine_consume_coin">消耗M豆</string>
    <string name="mine_exchange_goods_success">兑换成功</string>
    <string name="mine_add_coupon">请输入优惠码</string>
    <string name="mine_shop_detail">周边好物排排坐，看上就买别错过</string>
    <string name="mine_shop_title">时光·好物</string>
    <string name="mine_shop_entry">进入商城</string>
    <string name="mine_license_business">营业执照</string>
    <string name="mine_license_network_audio_visual">网络视听许可证</string>
    <string name="mine_license_program_production">广播电视节目制作经营许可证</string>
    <string name="mine_license_business_url">https://general.mtime.cn/mobile/2018/licence/licence.html</string>
    <string name="mine_license_network_audio_visual_url">https://general.mtime.cn/mobile/2019/audioVisual/audio-visual.html</string>
    <string name="mine_license_program_production_url">https://general.mtime.cn/mobile/2019/program/program.html</string>
    <string name="mine_comment_or_reply">评论/回复</string>
    <string name="mine_like">点赞</string>
    <string name="mine_movie_remind">观影通知</string>
    <string name="mine_movie_remind_more">查看更多</string>
    <string name="mine_creat_center">创作中心</string>
    <string name="mine_creat_level">创作等级</string>
    <string name="mine_creat_level_name">Lv</string>
    <string name="mine_rights_desc">权益说明</string>
    <string name="mine_lv_creat_num">/</string>
    <string name="mine_sex_male">男</string>
    <string name="mine_sex_female">女</string>
    <string name="mine_sex_secrecy">保密</string>
    <string name="mine_cancel">取消</string>
    <string name="mine_edit">编辑</string>
    <string name="mine_revoke">撤销</string>
    <string name="mine_delete">删除</string>
    <string name="mine_change_mobile_phone_number">更换手机号</string>
    <string name="mine_modify_password">修改账号密码</string>
    <string name="mine_third_account_bind">第三方账户绑定</string>
    <string name="mine_receive_notification_master_switch">接收通知总开关</string>
    <string name="mine_please_open_setting_to_modify">请在手机“设置-通知”中，选择“时光网进行修改”</string>
    <string name="mine_time_recommendation">时光推荐</string>
    <string name="mine_message_push">消息推送</string>
</resources>