<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/offset_6dp"
    android:paddingBottom="@dimen/offset_6dp"
    tools:ignore="ResourceName">

    <RelativeLayout
        android:id="@+id/maleRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/offset_6dp"
            android:padding="@dimen/offset_28px"
            android:text="@string/mine_sex_male"
            android:textColor="@color/color_404c57"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/femaleRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/offset_6dp"
            android:padding="@dimen/offset_28px"
            android:text="@string/mine_sex_female"
            android:textColor="@color/color_404c57"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/secretRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/offset_6dp"
            android:padding="@dimen/offset_28px"
            android:text="@string/mine_sex_secrecy"
            android:textColor="@color/color_404c57"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/offset_8dp"
        android:background="@color/color_f3f3f4" />

    <RelativeLayout
        android:id="@+id/cancelLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/offset_6dp"
            android:padding="@dimen/offset_28px"
            android:text="@string/mine_cancel"
            android:textColor="@color/color_8798af"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>