<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f3f6"
    android:orientation="vertical"
    tools:ignore="ResourceName">

    <RelativeLayout
        android:id="@+id/notificationSwitchRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:paddingLeft="@dimen/offset_15dp"
        android:paddingTop="@dimen/offset_9dp"
        android:paddingRight="@dimen/offset_10dp"
        android:paddingBottom="@dimen/offset_9dp">

        <TextView
            android:id="@+id/notificationSwitchTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/mine_receive_notification_master_switch"
            android:textColor="@color/color_1d2736"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="15dp"
            android:layout_below="@id/notificationSwitchTv"
            android:layout_marginTop="2dp"
            android:includeFontPadding="false"
            android:text="@string/mine_please_open_setting_to_modify"
            android:textColor="@color/color_cbd0d7"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="@dimen/offset_16dp"
            android:layout_height="@dimen/offset_16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_label_16_arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_5dp"
        android:background="@color/color_ffffff"
        android:padding="@dimen/offset_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:text="@string/mine_time_recommendation"
            android:textColor="@color/color_1d2736"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/imTimeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:thumb="@drawable/anonymous_switch_thumb_selector"
            android:track="@drawable/anonymous_switch_track_selector" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_15dp"
        android:layout_marginRight="@dimen/offset_15dp"
        android:background="@color/color_f3f5f6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:padding="@dimen/offset_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:text="@string/mine_message_push"
            android:textColor="@color/color_1d2736"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/messageSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:thumb="@drawable/anonymous_switch_thumb_selector"
            android:track="@drawable/anonymous_switch_track_selector"
            tools:checked="true" />

    </RelativeLayout>

</LinearLayout>